--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
 v0.5.0, 10/6/2013 -- Initial release.
 v0.5.1, 10/6/2013 -- Python3 compatibility
 v0.5.2, 10/6/2013 -- Python3 compatibility fixes
+v0.6.0, 12/2/2013 -- vastly improved method for updating/deleting args passed to Requests
